force-app/main/default/objects/OpportunityLineItem/fields/IFI_IntacctLocationID__c.field-meta.xml
<CustomField>
    <fullName>IFI_IntacctLocationID__c</fullName>
    <formula>IFI_Location__r.IFI_Location_ID__c</formula>
    <label>Intacct Location ID</label>
    <type>Text</type>
</CustomField>