force-app/main/default/objects/OpportunityLineItem/fields/IFI_Location__c.field-meta.xml
<CustomField>
    <fullName>IFI_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Location</label>
    <referenceTo>IFI_Location__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>