force-app/main/default/objects/OpportunityLineItem/fields/IFI_SFOppOwnerID__c.field-meta.xml
<CustomField>
    <fullName>IFI_SFOppOwnerID__c</fullName>
    <formula>CASESAFEID(Opportunity.OwnerId)</formula>
    <label>SF OppOwnerID</label>
    <type>Text</type>
</CustomField>